--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,16 +34,13 @@ jobs:
 
       - name: Build
         working-directory: memreduct
-        run:
-          msbuild memreduct.sln
+        run: msbuild memreduct.sln
           /p:WindowsTargetPlatformVersion=10.0.19041.0 `
           /p:Platform=x64 `
           /p:Configuration=Release `
           /p:WholeProgramOptimization=true `
           /p:Optimization=MinSpace `
           /p:FunctionLevelLinking=true
-
-          # /p:PlatformToolset=v142 `
 
       - name: Archive Binary
         uses: actions/upload-artifact@v5
@@ -52,3 +49,5 @@ jobs:
           path: |
             memreduct/x64/Release/*.dll
             memreduct/x64/Release/*.exe
+
+# /p:PlatformToolset=v142 `
