--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,12 +25,15 @@ jobs:
         run: |
           nuget restore
 
-      # - name: Setup msvc
-      #   uses: ilammy/msvc-dev-cmd@v1
-      #   with:
-      #     arch: x64
-      #     toolset: 14.29
-      #     sdk: 10.0.19041.0
+      - name: Setup msvc
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x64
+          sdk: 10.0.19041.0
+          # toolset: 14.29
+
+      - name: Setup msbuild
+        uses: microsoft/setup-msbuild@v2
 
       - name: Build
         working-directory: memreduct
