--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,6 @@ jobs:
         working-directory: memreduct
         run: |
           msbuild memreduct.sln `
-          /p:WindowsTargetPlatformVersion=10.0.19041.0 `
           /p:Platform=x64 `
           /p:Configuration=Release `
           /p:WholeProgramOptimization=true `
@@ -54,4 +53,5 @@ jobs:
             memreduct/x64/Release/*.dll
             memreduct/x64/Release/*.exe
 
+# /p:WindowsTargetPlatformVersion=10.0.19041.0
 # /p:PlatformToolset=v142 `
