--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,6 @@ jobs:
           /p:WholeProgramOptimization=true `
           /p:Optimization=MinSpace `
           /p:WindowsTargetPlatformVersion=10.0.19041.0 `
-          /p:PlatformToolset=v142 `
           /p:FunctionLevelLinking=true
 
       - name: Archive Binary
@@ -54,3 +53,5 @@ jobs:
           path: |
             memreduct/memreduct/x64/Release/*.dll
             memreduct/memreduct/x64/Release/*.exe
+
+# /p:PlatformToolset=v142 `
